--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,7 +17,20 @@
           <i class="fa-solid fa-utensils"></i>
           <h1>Panier</h1>
         </div>
-        <div class="p-content"></div>
+        <div class="p-content">
+          <div class="panier-plat">
+            <img src="" alt="" />
+            <div>
+              <button>-</button>
+              <input readonly type="number" />
+              <button>+</button>
+            </div>
+            <label>$</label>
+            <input readonly type="number" />
+            <button>X</button>
+          </div>
+          <hr />
+        </div>
       </div>
       <div class="panier-prix"><h1>Sommaire</h1></div>
     </div>
