ajouter img de burger menu

--- a/pages/Detailplat.html
+++ b/pages/Detailplat.html
@@ -21,7 +21,7 @@
       </nav>
       <!-- Menu icon for mobile -->
       <button id="menu-btn" class="md:hidden">
-        <img src="/menu-icon.png" alt="menu" class="w-8 h-8"/>
+        <img src="/images/menu-logo.png" alt="menu" class="w-8 h-8"/>
       </button>
     </header>
 
