menu html structure

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -7,8 +7,141 @@
     <link href="../output.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+    <header>
+        <nav></nav>
+        <div class="relative h-[24rem] w-full">
+            <img 
+                src="../images/Overlay1+Background.png" 
+                class="h-full w-full object-cover" 
+                alt="Background">
+            <div class="absolute inset-0 bg-slate-950/90 opacity-90"></div>
+            <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-4">
+                <h2 class="text-white text-4x1 md:text-5xl font-extrabold mb-4">Food Menu</h2>
+                <div class="flex flex-wrap justify-center gap-2 mb-6 text-yellow-600">
+                    <p>accueil /</p>
+                    <p>contact /</p>
+                    <p class="text-white">Menu</p>
+                </div>
+                <input 
+                    type="text" 
+                    placeholder="search"
+                    class="w-full max-w-md bg-blue-950 text-white rounded-3xl py-2 px-6 placeholder:text-white focus:outline-none"></input>
+            </div>
+        </div>
+    </header>
+
+    <section>
+        <div class="flex flex-row gap-4 items-center justify-center">
+            <hr class="border-t-2 border-yellow-600 my-3 w-8">
+            <p class="text-yellow-600 font-extrabold">Food Menu</p>
+            <hr class="border-t-2 border-yellow-600 my-3 w-8">
+        </div>
+
+        <h2 class="text-black text-4x1 mt-5 text-center md:text-5xl font-extrabold mb-4">Most Popular Items</h2> 
+        <!-- ------------------------------------- Most Popular Breakfast ---------------------------------- -->
+        
+        <div class="flex flex-col items-center justify-center">
+            <div class="flex flex-row">
+                <img 
+                    src="../images/Symbol.png"
+                    class="h-10 mt-2"
+                    alt="logo">
+                <div class="flex flex-col">
+                    <p>Popular</p>
+                    <p class="font-extrabold">Breakfast</p>
+                </div>            
+            </div>
+            <hr class="border-t-2 border-yellow-600 my-3 w-35">
+        </div>
+
+        <div class="flex justify-center gap-50">
+            <div class="flex flex-row gap-5">
+                <img src="../images/Overlay1+Background.png" class="w-20 h-20">
+                <div class="mt-3">
+                    <p class="font-extrabold text-2xl">Chicken Burger</p>
+                    <p>Ipsum ipsum clita erat amet dolor justo diam</p>
+                </div>
+                <p class="font-extrabold text-yellow-500 mt-5 text-2xl">$115</p>
+            </div>
+            <div class="flex flex-row gap-5">
+                <img src="../images/Overlay1+Background.png" class="w-20 h-20">
+                <div class="mt-3">
+                    <p class="font-extrabold text-2xl">Chicken Burger</p>
+                    <p>Ipsum ipsum clita erat amet dolor justo diam</p>
+                </div>
+                <p class="font-extrabold text-yellow-500 mt-5 text-2xl">$115</p>
+            </div>
+        </div>
+
+        <!-- ------------------------------------- Most Special Launch ---------------------------------- -->
+        <div class="flex flex-col items-center justify-center">
+            <div class="flex flex-row">
+                <img 
+                    src="../images/Symbol.png"
+                    class="h-10 mt-2"
+                    alt="logo">
+                <div class="flex flex-col">
+                    <p>Special</p>
+                    <p class="font-extrabold">Launch</p>
+                </div>            
+            </div>
+            <hr class="border-t-2 border-yellow-600 my-3 w-35">
+        </div>
+
+        <div class="flex justify-center gap-50">
+            <div class="flex flex-row gap-5">
+                <img src="../images/Overlay1+Background.png" class="w-20 h-20">
+                <div class="mt-3">
+                    <p class="font-extrabold text-2xl">Chicken Burger</p>
+                    <p>Ipsum ipsum clita erat amet dolor justo diam</p>
+                </div>
+                <p class="font-extrabold text-yellow-500 mt-5 text-2xl">$115</p>
+            </div>
+            <div class="flex flex-row gap-5">
+                <img src="../images/Overlay1+Background.png" class="w-20 h-20">
+                <div class="mt-3">
+                    <p class="font-extrabold text-2xl">Chicken Burger</p>
+                    <p>Ipsum ipsum clita erat amet dolor justo diam</p>
+                </div>
+                <p class="font-extrabold text-yellow-500 mt-5 text-2xl">$115</p>
+            </div>
+        </div>
+
+        <!-- ------------------------------------- Most Popular Items ---------------------------------- -->
+        <div class="flex flex-col items-center justify-center">
+            <div class="flex flex-row">
+                <img 
+                    src="../images/Symbol.png"
+                    class="h-10 mt-2"
+                    alt="logo">
+                <div class="flex flex-col">
+                    <p>Special</p>
+                    <p class="font-extrabold">Launch</p>
+                </div>            
+            </div>
+            <hr class="border-t-2 border-yellow-600 my-3 w-35">
+        </div>
+
+        <div class="flex justify-center gap-50">
+            <div class="flex flex-row gap-5">
+                <img src="../images/Overlay1+Background.png" class="w-20 h-20">
+                <div class="mt-3">
+                    <p class="font-extrabold text-2xl">Chicken Burger</p>
+                    <p>Ipsum ipsum clita erat amet dolor justo diam</p>
+                </div>
+                <p class="font-extrabold text-yellow-500 mt-5 text-2xl">$115</p>
+            </div>
+            <div class="flex flex-row gap-5">
+                <img src="../images/Overlay1+Background.png" class="w-20 h-20">
+                <div class="mt-3">
+                    <p class="font-extrabold text-2xl">Chicken Burger</p>
+                    <p>Ipsum ipsum clita erat amet dolor justo diam</p>
+                </div>
+                <p class="font-extrabold text-yellow-500 mt-5 text-2xl">$115</p>
+            </div>
+        </div>
+
+        <h2 class="text-black text-4x1 mt-5 text-center md:text-5xl font-extrabold mb-4">Plats Disponibles</h2> 
+    </section>
 </body>
 </html>
