--- a/pages/Detailplat.html
+++ b/pages/Detailplat.html
@@ -32,11 +32,12 @@
   </header>
 
   <!-- Mobile Menu -->
-  <div id="mobile-menu" class="hidden block items-center bg-[#0F172A] text-white md:hidden py-4 space-y-3">
+  <div id="mobile-menu" class="hidden flex flex-col bg-[#0F172A] text-white md:hidden py-4 space-y-3">
     <a href="#" class="hover:text-yellow-400">Accueil</a>
     <a href="#" class="hover:text-yellow-400">Menu</a>
     <a href="#" class="hover:text-yellow-400">Contact</a>
-    <button class="bg-yellow-500 hover:bg-yellow-400 text-black px-4 py-2 rounded-md font-semibold">Réserver</button>
+    <button
+      class="bg-yellow-500 hover:bg-yellow-400 text-black w-25 px- py-2 rounded-md font-semibold">Réserver</button>
   </div>
 
   <!-- Hero Section -->
@@ -154,14 +155,6 @@
 
   </footer>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    const menuBtn = document.getElementById('menu-btn');
-    const mobileMenu = document.getElementById('mobile-menu');
-
-    menuBtn.addEventListener('click', () => {
-      mobileMenu.classList.toggle('hidden');
-    });
-  </script>
+  <script src="../js/detail-plat.js"></script>
 </body>
-
 </html>
