--- a/pages/Detailplat.html
+++ b/pages/Detailplat.html
@@ -25,7 +25,7 @@
         <img src="../images/Shopping cart.png" alt="Shopping cart" class="w-5 h-5" />
       </button>
     </nav>
-    <!-- Menu icon for mobile -->
+    <!-- Menu icon mobile -->
     <button id="menu-btn" class="md:hidden">
       <img src="/images/menu-logo.png" alt="menu" class="w-8 h-8" />
     </button>
@@ -71,7 +71,8 @@
       <li><strong>Prix :</strong> 60 MAD</li>
     </ul>
 
-    <button class="bg-yellow-500 hover:bg-yellow-400 text-black px-6 py-2 rounded-md font-semibold">Commander</button>
+    <button class="bg-yellow-500 hover:bg-yellow-400 text-white px-6 py-2 rounded-md font-semibold">Ajouter au
+      panier</button>
   </section>
 
   <footer class="bg-[#0F172A] text-gray-300 py-12 px-6">
@@ -124,9 +125,13 @@
           class="text-lg font-semibold text-yellow-500 mb-4 relative inline-block after:content-[''] after:block after:w-10 after:h-[2px] after:bg-yellow-500 after:mt-1">
           Newsletter</h4>
         <p class="text-sm mb-4">Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-        <div class="flex bg-white rounded-md overflow-hidden max-w-xs">
-          <input type="email" placeholder="Your email" class="flex-1 px-3 py-2 text-gray-700 focus:outline-none" />
-          <button class="bg-yellow-500 hover:bg-yellow-400 text-black font-semibold ml-1 px-">SIGNUP</button>
+        <div class="relative max-w-xs">
+          <input type="email" placeholder="Your email"
+            class="w-full rounded-md border border-gray-300 px-3 py-2 pr-20 text-gray-700 focus:outline-none" />
+          <button
+            class="absolute right-0 top-0 h-full bg-yellow-500 hover:bg-yellow-400 text-black font-semibold px-4 rounded-r-md">
+            SIGNUP
+          </button>
         </div>
       </div>
     </div>
@@ -157,4 +162,5 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="../js/detail-plat.js"></script>
 </body>
+
 </html>
