fix responsive header

--- a/pages/Detailplat.html
+++ b/pages/Detailplat.html
@@ -25,20 +25,22 @@
         <img src="../images/Shopping cart.png" alt="Shopping cart" class="w-5 h-5" />
       </button>
     </nav>
-    <!-- Menu icon mobile -->
+    <!-- Menu mobile -->
     <button id="menu-btn" class="md:hidden">
       <img src="/images/menu-logo.png" alt="menu" class="w-8 h-8" />
     </button>
   </header>
 
   <!-- Mobile Menu -->
-  <div id="mobile-menu" class="hidden flex flex-col bg-[#0F172A] text-white md:hidden py-4 space-y-3">
-    <a href="#" class="hover:text-yellow-400">Accueil</a>
-    <a href="#" class="hover:text-yellow-400">Menu</a>
-    <a href="#" class="hover:text-yellow-400">Contact</a>
+  <div id="mobile-menu" class="hidden flex flex-col bg-[#0F172A] text-white md:hidden py-4 space-y-3 shadow-lg">
+    <a href="#" class="hover:text-yellow-400 ml-6 w-[300px] border-b-2 border-yellow-500">Accueil</a>
+    <a href="#" class="hover:text-yellow-400 ml-6 w-[300px] border-b-2 border-yellow-500">Menu</a>
+    <a href="#" class="hover:text-yellow-400 ml-6 w-[300px] border-b-2 border-yellow-500">Contact</a>
     <button
-      class="bg-yellow-500 hover:bg-yellow-400 text-black w-25 px- py-2 rounded-md font-semibold">Réserver</button>
+      class="bg-yellow-500 flex hover:bg-yellow-400 text-white ml-6 px-4 py-2 font-semibold w-[120px] space-x-2"><span>Pannier</span>
+      <img src="../images/Shopping cart.png" alt="Shopping cart" class="w-5 h-5" /></button>
   </div>
+
 
   <!-- Hero Section -->
   <section class="bg-[url('../images/Background.png')] h-9x1 bg-cover bg-center py-40 md:py-60 text-white">
@@ -47,7 +49,7 @@
     </div>
   </section>
 
-  <!-- Spécialité Section -->
+  <!-- Detail Section -->
   <section class="max-w-3xl mx-auto my-16 text-center px-4">
     <div class="flex justify-center items-center space-x-2 mb-6">
       <div class="w-10 h-[2px] bg-yellow-500"></div>
