--- a/pages/Detailplat.html
+++ b/pages/Detailplat.html
@@ -53,7 +53,7 @@
   <section class="max-w-3xl mx-auto my-16 text-center px-4">
     <div class="flex justify-center items-center space-x-2 mb-6">
       <div class="w-10 h-[2px] bg-yellow-500"></div>
-      <img src="/star-icon.png" alt="icon" class="w-6 h-6" />
+      <h3 class="text-yellow-500">Plat Détaille</h3>
       <div class="w-10 h-[2px] bg-yellow-500"></div>
     </div>
 
