modification dans le header

--- a/pages/Detailplat.html
+++ b/pages/Detailplat.html
@@ -31,9 +31,9 @@
   </header>
 
   <div id="mobile-menu" class="hidden flex flex-col bg-[#0F172A] text-white md:hidden py-4 space-y-3 shadow-lg">
-    <a href="#" class="hover:text-yellow-400 ml-6 w-[300px] border-b-2 border-yellow-500">Accueil</a>
-    <a href="#" class="hover:text-yellow-400 ml-6 w-[300px] border-b-2 border-yellow-500">Menu</a>
-    <a href="#" class="hover:text-yellow-400 ml-6 w-[300px] border-b-2 border-yellow-500">Contact</a>
+    <a href="#" class="hover:text-yellow-400 ml-6 w-[250px] border-b-2 border-yellow-500">Accueil</a>
+    <a href="#" class="hover:text-yellow-400 ml-6 w-[250px] border-b-2 border-yellow-500">Menu</a>
+    <a href="#" class="hover:text-yellow-400 ml-6 w-[250px] border-b-2 border-yellow-500">Contact</a>
     <button
       class="bg-yellow-500 flex hover:bg-yellow-400 text-white ml-6 px-4 py-2 font-semibold w-[120px] space-x-2"><span>Pannier</span>
       <img src="../images/Shopping cart.png" alt="Shopping cart" class="w-5 h-5" /></button>
@@ -53,11 +53,13 @@
       <h3 class="text-yellow-500">Plat Détaille</h3>
       <div class="w-10 h-[2px] bg-yellow-500"></div>
     </div>
+    <div>
+      <h3 class="text-2xl font-bold mb-6">Pizza Margherita Classica</h3>
+      <img src="/specialite.jpg" alt="Pizza Margherita" class="rounded-2xl shadow-md mx-auto mb-6 w-full max-w-md" />
+    </div>
 
-    <h3 class="text-2xl font-bold mb-6">Pizza Margherita Classica</h3>
-    <img src="/specialite.jpg" alt="Pizza Margherita" class="rounded-2xl shadow-md mx-auto mb-6 w-full max-w-md" />
 
-    <p class="text-gray-700 leading-relaxed mb-6">
+    <p class="text-gray-700 text-left leading-relaxed mb-6">
       La Pizza Margherita Classica est une création faite avec des ingrédients
       italiens traditionnels. Sa pâte légère et croustillante, accompagnée
       d'une sauce tomate fraîche, de mozzarella fondante et de basilic frais,
@@ -69,9 +71,12 @@
       <li><strong>Temps de préparation :</strong> 15 minutes</li>
       <li><strong>Prix :</strong> 60 MAD</li>
     </ul>
-
-    <button class="bg-yellow-500 hover:bg-yellow-400 text-white px-6 py-2 rounded-md font-semibold">Ajouter au
-      panier</button>
+     <div class="flex justify-center">
+     <button
+      class="bg-yellow-500 flex justify-center hover:bg-yellow-400 text-white ml-6 px-4 py-2 font-semibold space-x-2"><span>Ajouter au Pannier</span>
+      <img src="../images/Shopping cart.png" alt="Shopping cart" class="w-5 h-5" /></button> 
+     </div>
+    
   </section>
 
   <footer class="bg-[#0F172A] text-gray-300 py-12 px-6">
