--- a/pages/Detailplat.html
+++ b/pages/Detailplat.html
@@ -47,14 +47,14 @@
   </section>
 
 
-  <section class="max-w-3xl mx-auto my-16 text-center px-4">
+  <section class="max-w-3xl mx-auto my-16 px-4">
     <div class="flex justify-center items-center space-x-2 mb-6">
       <div class="w-10 h-[2px] bg-yellow-500"></div>
       <h3 class="text-yellow-500">Plat Détaille</h3>
       <div class="w-10 h-[2px] bg-yellow-500"></div>
     </div>
     <div>
-      <h3 class="text-2xl font-bold mb-6">Pizza Margherita Classica</h3>
+      <h3 class="text-2xl font-bold mb-6 text-center">Pizza Margherita Classica</h3>
       <img src="/specialite.jpg" alt="Pizza Margherita" class="rounded-2xl shadow-md mx-auto mb-6 w-full max-w-md" />
     </div>
 
@@ -65,18 +65,27 @@
       d'une sauce tomate fraîche, de mozzarella fondante et de basilic frais,
       offre une expérience gustative authentique.
     </p>
+    <div>
+      <div>
+        <strong class="text-left">Ingrédients :</strong>
+        <ul class="text-left text-yellow-500 mb-6">
+          <li>tomate </li>
+          <li>mozzarella</li>
+          <li>huile d’olive</li>
+          <li>basilic</li>
+        </ul>
+      </div>
+      <div>
 
-    <ul class="text-left text-gray-700 mb-6">
-      <li><strong>Ingrédients :</strong> tomate, mozzarella, basilic, huile d’olive</li>
-      <li><strong>Temps de préparation :</strong> 15 minutes</li>
-      <li><strong>Prix :</strong> 60 MAD</li>
-    </ul>
-     <div class="flex justify-center">
-     <button
-      class="bg-yellow-500 flex justify-center hover:bg-yellow-400 text-white ml-6 px-4 py-2 font-semibold space-x-2"><span>Ajouter au Pannier</span>
-      <img src="../images/Shopping cart.png" alt="Shopping cart" class="w-5 h-5" /></button> 
-     </div>
-    
+      </div>
+    </div>
+    <div class="flex justify-center">
+      <button
+        class="bg-yellow-500 flex justify-center hover:bg-yellow-400 text-white ml-6 px-4 py-2 font-semibold space-x-2"><span>Ajouter
+          au Pannier</span>
+        <img src="../images/Shopping cart.png" alt="Shopping cart" class="w-5 h-5" /></button>
+    </div>
+
   </section>
 
   <footer class="bg-[#0F172A] text-gray-300 py-12 px-6">
