--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     />
     <link href="css/panier.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- panier script -->
+    <script src="js/panier.js" defer></script>
+    <!--  -->
     <title></title>
   </head>
   <body>
-    <!--  -->
     <!-- panier popup -->
     <!--  -->
     <div class="panier h-full w-7/12 flex border-2 rounded-3xl">
       <div class="panier-info w-10/12 overflow-auto h-full">
         <!-- titre -->
-        <div id="p-t" class="flex items-center p-2">
+        <div id="p-title" class="flex items-center p-2">
           <i class="fa-solid fa-utensils"></i>
           <h1 class="text-5xl">Panier</h1>
         </div>
