--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -53,25 +53,32 @@
             </div>
             <hr class="border-t-2 border-yellow-600 my-3 w-35">
         </div>
+        
+        <!-- Breakfast card  -->
+    <div class="flex flex-col items-center gap-3 w-full">
+        <!-- Card -->
+        <div
+        id="Breakfast-card"
+        class="flex flex-col items-center justify-center "
+        ></div>
 
-        <div class="flex justify-center gap-50">
-            <div class="flex flex-row gap-5">
-                <img src="../images/Overlay1+Background.png" class="w-20 h-20">
-                <div class="mt-3">
-                    <p class="font-extrabold text-2xl">Chicken Burger</p>
-                    <p>Ipsum ipsum clita erat amet dolor justo diam</p>
-                </div>
-                <p class="font-extrabold text-yellow-500 mt-5 text-2xl">$115</p>
-            </div>
-            <div class="flex flex-row gap-5">
-                <img src="../images/Overlay1+Background.png" class="w-20 h-20">
-                <div class="mt-3">
-                    <p class="font-extrabold text-2xl">Chicken Burger</p>
-                    <p>Ipsum ipsum clita erat amet dolor justo diam</p>
-                </div>
-                <p class="font-extrabold text-yellow-500 mt-5 text-2xl">$115</p>
-            </div>
+        <div id="wrap-buttons" class="flex gap-16">
+            <!-- Left Button -->
+            <button
+            id="swipLeft"
+            class="cursor-pointer">
+                <img src="../images/icons8-back-arrow-50.png" alt="">
+            </button>
+            <!-- Right Button -->
+            <button
+            id="swipRight"
+            class="cursor-pointer">
+                <img src="../images/icons8-back-arrow-right-50.png" alt="">
+            </button>
         </div>
+    </div>
+
+
 
         <!-- ------------------------------------- Most Special Launch ---------------------------------- -->
         <div class="flex flex-col items-center justify-center">
@@ -143,5 +150,7 @@
 
         <h2 class="text-black text-4x1 mt-5 text-center md:text-5xl font-extrabold mb-4">Plats Disponibles</h2> 
     </section>
+    
+    <script src="../js/Menu.js"></script>
 </body>
 </html>
