--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -54,11 +54,12 @@
 
     <main class="py-16">
         <section class="ContactUs max-w-6xl mx-auto px-4">
-            
+
             <div class="text-center mb-16">
                 <div class="flex items-center justify-center gap-4 mb-3">
                     <div class="w-12 h-0.5 bg-yellow-400"></div>
-                    <h4 class="text-yellow-400 text-3xl italic font-medium" style="font-family: 'Brush Script MT', cursive;">
+                    <h4 class="text-yellow-400 text-3xl italic font-medium"
+                        style="font-family: 'Brush Script MT', cursive;">
                         Contact Us</h4>
                     <div class="w-12 h-0.5 bg-yellow-400"></div>
                 </div>
@@ -74,8 +75,7 @@
                             style="font-family: 'Brush Script MT', cursive; ">Booking</h4>
                         <div class="w-8 h-0.5 bg-yellow-400"></div>
                     </div>
-                    <div
-                        class="carte bg-gray-900 text-gray-400 rounded-2xl p-8  flex-1 flex flex-col justify-center">
+                    <div class="carte bg-gray-900 text-gray-400 rounded-2xl p-8  flex-1 flex flex-col justify-center">
                         <div class="flex items-start gap-4 mb-6">
                             <svg class="w-5 h-5 text-yellow-400 mt-1 flex-shrink-0" fill="currentColor"
                                 viewBox="0 0 20 20">
@@ -83,7 +83,8 @@
                                     d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
                                     clip-rule="evenodd" />
                             </svg>
-                            <p class="text-lg leading-relaxed font-medium">Av. Paz Soldán 290, San Isidro, Lima 27 - Peru</p>
+                            <p class="text-lg leading-relaxed font-medium">Av. Paz Soldán 290, San Isidro, Lima 27 -
+                                Peru</p>
                         </div>
                         <div class="flex items-center gap-4 mb-6">
                             <svg class="w-5 h-5 text-yellow-400 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
@@ -102,7 +103,7 @@
                     </div>
                 </div>
 
-            
+
                 <div class="general flex flex-col">
                     <div class="flex items-center justify-center gap-3 mb-6">
                         <div class="w-8 h-0.5 bg-yellow-400"></div>
@@ -110,12 +111,12 @@
                             style="font-family: 'Brush Script MT', cursive;">General</h4>
                         <div class="w-8 h-0.5 bg-yellow-400"></div>
                     </div>
-                    <div
-                        class="carte bg-gray-900 text-gray-400 rounded-2xl p-8  flex-1 flex flex-col justify-center">
+                    <div class="carte bg-gray-900 text-gray-400 rounded-2xl p-8  flex-1 flex flex-col justify-center">
                         <h3 class="text-yellow-400 text-xl font-semibold mb-6 text-center">Hours of service</h3>
                         <div class="days mb-6">
                             <h4 class="text-gray-300 text-lg font-medium mb-2">Monday to Saturday</h4>
-                            <p class="text-lg leading-relaxed font-medium">1:00 pm - 3:00 pm and<br>7:00 pm - 11:00 pm</p>
+                            <p class="text-lg leading-relaxed font-medium">1:00 pm - 3:00 pm and<br>7:00 pm - 11:00 pm
+                            </p>
                         </div>
                         <div class="sunday">
                             <h4 class="text-gray-300 text-lg font-medium mb-2">Sunday</h4>
@@ -131,13 +132,45 @@
                             style="font-family: 'Brush Script MT', cursive;">Technical</h4>
                         <div class="w-8 h-0.5 bg-yellow-400"></div>
                     </div>
-                    <div
-                        class="carte bg-gray-900 text-gray-400 rounded-2xl p-8 flex-1 flex flex-col justify-center">
+                    <div class="carte bg-gray-900 text-gray-400 rounded-2xl p-8 flex-1 flex flex-col justify-center">
                         <h3 class="text-yellow-400 text-xl font-semibold mb-6 text-center">Telephone support</h3>
                         <p class="text-lg leading-relaxed font-medium">Monday to Saturday from 9:00 am to 9:00 pm</p>
                     </div>
                 </div>
 
+            </div>
+        </section>
+
+        <section class="py-16">
+            <div class=" mx-auto px-8">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <div class="map rounded-lg overflow-hidden shadow-lg h-full min-h-[400px]">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1726251.2952794593!2d-11.565707406250025!3d32.323013100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdac21f1ff9e80d5%3A0x9ee49d3b2705c59d!2zTCfDrmxvdCBDaMOidGFpbg!5e0!3m2!1sfr!2sma!4v1762720692590!5m2!1sfr!2sma"
+                            width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy">
+                        </iframe>
+                    </div>
+
+                    <div class="form-container">
+                        <form action="" class="space-y-4">
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 font-medium">
+                                <input type="text" placeholder="Your Name"
+                                    class="w-full px-4 py-3 border border-gray-300 rounded focus:outline-none focus:border-yellow-400">
+                                <input type="email" placeholder="Your Email"
+                                    class="w-full px-4 py-3 border border-gray-300 rounded focus:outline-none focus:border-yellow-400">
+                            </div>
+                            <input type="text" placeholder="Subject"
+                                class="w-full px-4 py-3 border border-gray-300 rounded focus:outline-none focus:border-yellow-400 font-medium">
+                            <textarea placeholder="Message" rows="10"
+                                class="w-full px-4 py-3 border border-gray-300 rounded focus:outline-none focus:border-yellow-400 resize-none font-medium"></textarea>
+
+                            <button type="submit"
+                                class="w-full bg-yellow-400 text-white font-bold py-4 rounded hover:bg-yellow-500 transition duration-300 font-medium">SEND
+                                MESSAGE</button>
+                        </form>
+                    </div>
+
+                </div>
             </div>
         </section>
     </main>
