--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -33,7 +33,8 @@
     </header>
 
     <aside class="relative h-screen bg-cover bg-center flex flex-col items-center justify-center text-white"
-        style="background-image: url('../images/Background.png');">
+        style="background-image: url('../images/Background.png');" role="img"
+        aria-label="background d'un restaurant avec un repas delicieu">
 
         <div class="relative z-10 text-center px-4">
             <h1 class="text-6xl font-bold mb-6">Contact Us</h1>
@@ -77,7 +78,8 @@
                     </div>
                     <div class="carte bg-gray-900 text-gray-400 rounded-2xl p-8  flex-1 flex flex-col justify-center">
                         <div class="flex items-start gap-4 mb-6">
-                            <svg class="w-5 h-5 text-yellow-400 mt-1 flex-shrink-0" fill="currentColor"
+                            <svg aria-label="une icone d'une location"
+                                class="w-5 h-5 text-yellow-400 mt-1 flex-shrink-0" fill="currentColor"
                                 viewBox="0 0 20 20">
                                 <path fill-rule="evenodd"
                                     d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
@@ -87,14 +89,16 @@
                                 Peru</p>
                         </div>
                         <div class="flex items-center gap-4 mb-6">
-                            <svg class="w-5 h-5 text-yellow-400 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+                            <svg aria-label="une icone d'un numero de tele"
+                                class="w-5 h-5 text-yellow-400 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
                                 <path
                                     d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
                             </svg>
                             <p class="text-lg font-medium">+511 442-2777</p>
                         </div>
                         <div class="flex items-center gap-4">
-                            <svg class="w-5 h-5 text-yellow-400 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+                            <svg aria-label="une icone d'un email" class="w-5 h-5 text-yellow-400 flex-shrink-0"
+                                fill="currentColor" viewBox="0 0 20 20">
                                 <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
                                 <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
                             </svg>
@@ -137,7 +141,6 @@
                         <p class="text-lg leading-relaxed font-medium">Monday to Saturday from 9:00 am to 9:00 pm</p>
                     </div>
                 </div>
-
             </div>
         </section>
 
@@ -145,7 +148,7 @@
             <div class=" mx-auto px-8">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div class="map rounded-lg overflow-hidden shadow-lg h-full min-h-[400px]">
-                        <iframe
+                        <iframe title="location map du restaurant"
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1726251.2952794593!2d-11.565707406250025!3d32.323013100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdac21f1ff9e80d5%3A0x9ee49d3b2705c59d!2zTCfDrmxvdCBDaMOidGFpbg!5e0!3m2!1sfr!2sma!4v1762720692590!5m2!1sfr!2sma"
                             width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy">
                         </iframe>
@@ -153,20 +156,33 @@
 
                     <div class="form-container">
                         <form action="" class="space-y-4">
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 font-medium">
-                                <input type="text" placeholder="Your Name"
-                                    class="w-full px-4 py-3 border border-gray-300 rounded focus:outline-none focus:border-yellow-400">
-                                <input type="email" placeholder="Your Email"
-                                    class="w-full px-4 py-3 border border-gray-300 rounded focus:outline-none focus:border-yellow-400">
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                                <div>
+                                    <label for="name user" class="sr-only">Your Name</label>
+                                    <input id="name" type="text" placeholder="Your Name"
+                                        class="w-full px-4 py-3 border border-gray-300 rounded font-medium focus:outline-none focus:border-yellow-400">
+                                </div>
+                                <div>
+                                    <label for="email" class="sr-only">Your Email</label>
+                                    <input id="email" type="email" placeholder="Your Email"
+                                        class="w-full px-4 py-3 border border-gray-300 rounded focus:outline-none font-medium focus:border-yellow-400">
+                                </div>
                             </div>
-                            <input type="text" placeholder="Subject"
-                                class="w-full px-4 py-3 border border-gray-300 rounded focus:outline-none focus:border-yellow-400 font-medium">
-                            <textarea placeholder="Message" rows="10"
-                                class="w-full px-4 py-3 border border-gray-300 rounded focus:outline-none focus:border-yellow-400 resize-none font-medium"></textarea>
 
+                            <div>
+                                <label for="subject" class="sr-only">Subject</label>
+                                <input id="subject" type="text" placeholder="Subject"
+                                    class="w-full px-4 py-3 border border-gray-300 font-medium rounded focus:outline-none focus:border-yellow-400">
+                            </div>
+                            <div>
+                                <label for="message" class="sr-only ">Message</label>
+                                <textarea id="message" placeholder="Message" rows="8"
+                                    class="w-full px-4 py-3 border border-gray-300 rounded font-medium focus:outline-none focus:border-yellow-400 resize-none"></textarea>
+                            </div>
                             <button type="submit"
-                                class="w-full bg-yellow-400 text-white font-bold py-4 rounded hover:bg-yellow-500 transition duration-300 font-medium">SEND
-                                MESSAGE</button>
+                                class="w-full bg-yellow-400 text-white font-bold py-4 rounded hover:bg-yellow-500 transition duration-300">
+                                SEND MESSAGE
+                            </button>
                         </form>
                     </div>
 
