--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <div class="p-content flex flex-col justify-center items-center">
           <!-- chaque plat -->
           <div
-            class="panier-plat flex justify-between items-center w-4/4 p-3.5"
+            class="flex justify-between items-center w-4/4 p-3.5 panier-plat"
           >
             <img src="" alt="plat" />
             <h2 class="text-3xl">Chicken burger</h2>
-            <div>
+            <div class="pm">
               <button class="text-4xl decrease">-</button>
-              <input readonly type="number" class="text-4xl" />
+              <input readonly type="number" class="text-4xl plat-count" />
               <button class="text-4xl increase">+</button>
             </div>
-            <select class="text-3xl">
+            <select class="text-3xl plat-size">
               <option value="">S</option>
               <option value="">L</option>
               <option value="">XL</option>
@@ -45,67 +45,6 @@
             <label class="text-3xl price-tag">$100</label>
             <button class="text-3xl cancel">X</button>
           </div>
-          <!--  -->
-          <!-- chaque plat -->
-          <div
-            class="panier-plat flex justify-between items-center w-4/4 p-3.5"
-          >
-            <img src="" alt="plat" />
-            <h2 class="text-3xl">Chicken burger</h2>
-            <div>
-              <button class="text-4xl decrease">-</button>
-              <input readonly type="number" class="text-4xl" />
-              <button class="text-4xl increase">+</button>
-            </div>
-            <select class="text-3xl">
-              <option value="">S</option>
-              <option value="">L</option>
-              <option value="">XL</option>
-            </select>
-            <label class="text-3xl price-tag">$100</label>
-            <button class="text-3xl cancel">X</button>
-          </div>
-          <!--  -->
-          <!-- chaque plat -->
-          <div
-            class="panier-plat flex justify-between items-center w-4/4 p-3.5"
-          >
-            <img src="" alt="plat" />
-            <h2 class="text-3xl">Chicken burger</h2>
-            <div>
-              <button class="text-4xl decrease">-</button>
-              <input readonly type="number" class="text-4xl" />
-              <button class="text-4xl increase">+</button>
-            </div>
-            <select class="text-3xl">
-              <option value="">S</option>
-              <option value="">L</option>
-              <option value="">XL</option>
-            </select>
-            <label class="text-3xl price-tag">$100</label>
-            <button class="text-3xl cancel">X</button>
-          </div>
-          <!--  -->
-          <!-- chaque plat -->
-          <div
-            class="panier-plat flex justify-between items-center w-4/4 p-3.5"
-          >
-            <img src="" alt="plat" />
-            <h2 class="text-3xl">Chicken burger</h2>
-            <div>
-              <button class="text-4xl decrease">-</button>
-              <input readonly type="number" class="text-4xl" />
-              <button class="text-4xl increase">+</button>
-            </div>
-            <select class="text-3xl">
-              <option value="">S</option>
-              <option value="">L</option>
-              <option value="">XL</option>
-            </select>
-            <label class="text-3xl price-tag">$100</label>
-            <button class="text-3xl cancel">X</button>
-          </div>
-          <!--  -->
         </div>
       </div>
       <!-- panier sidebar -->
