--- a/index.html
+++ b/index.html
@@ -28,13 +28,18 @@
         <div class="p-content flex flex-col justify-center items-center">
           <!-- chaque plat -->
           <div
-            class="flex justify-between items-center w-4/4 p-3.5 panier-plat"
+            class="panier-plat flex justify-between items-center w-4/4 p-3.5"
           >
             <img src="" alt="plat" />
             <h2 class="text-3xl">Chicken burger</h2>
             <div class="pm">
               <button class="text-4xl decrease">-</button>
-              <input readonly type="number" class="text-4xl plat-count" />
+              <input
+                readonly
+                type="number"
+                min="1"
+                class="text-4xl plat-count"
+              />
               <button class="text-4xl increase">+</button>
             </div>
             <select class="text-3xl plat-size">
@@ -42,8 +47,11 @@
               <option value="">L</option>
               <option value="">XL</option>
             </select>
-            <label class="text-3xl price-tag">$100</label>
-            <button class="text-3xl cancel">X</button>
+            <!-- price n cnacel -->
+            <div class="pc flex justify-between w-1/4">
+              <label class="text-3xl price-tag">$100</label>
+              <button class="text-3xl cancel">X</button>
+            </div>
           </div>
         </div>
       </div>
